--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 .apresentacao {
-    margin: 5% 15%;
+    margin: 2% 15%;
     display: flex;
     justify-content: space-between;
     height: 100vh;
@@ -107,11 +107,10 @@ body {
 
 .apresentacao__conteudo2 {
     width: 400px; 
-    height: 100vh;
+    height: 610px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     text-align: center;
     gap: 10px;
     background-color: var(--cor-quaternaria);
@@ -123,6 +122,7 @@ body {
 .apresentacao__conteudo2__img {
     max-width: 70%;
     height: auto;
+    padding: 80px 0 0 0;
 }
 
 .apresentacao__conteudo2__resultado{
@@ -131,7 +131,7 @@ body {
     color: var(--cor-terciaria);
     font-weight: 400;
     line-height: 36px;
-    /*padding: 36px;*/
+    text-align: left;
 }
 
 .apresentacao__conteudo2__texto {
@@ -150,9 +150,10 @@ body {
     line-height: 24px;
 }
 
-.apresentacao__conteudo2__botao{
+.apresentacao__conteudo2__botao {
+    margin-top: auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start; /* Alterado para flex-start para evitar centralização vertical */
     align-items: center;
     border: 2px solid var(--cor-secundaria);
     background-color: var(--cor-quaternaria);
