--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,7 +88,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid var(--cor-terciaria);
+    border: none;
     background-color: var(--cor-quintenaria);
     width: 328px; 
     height: 67px;
@@ -103,7 +103,7 @@ body {
 
 .apresentacao__botoes__botao:hover {
     background-color: var(--cor-hover);
-    color: var(--cor-quaternaria);
+    color: var(--cor-primaria);
 }
 
 .apresentacao__conteudo2 {
@@ -116,7 +116,7 @@ body {
     background-color: var(--cor-quaternaria);
     padding: 20px;
     border-radius: 32px;
-    box-shadow: 0px 24px 32px 8px rgba(0, 0, 0, 0.02);
+    box-shadow: 0px 24px 32px 8px rgba(0, 0, 0, 0.05);
 }
 
 .apresentacao__conteudo2__img {
@@ -131,8 +131,8 @@ body {
     color: var(--cor-terciaria);
     font-weight: 400;
     line-height: 36px;
-    width: 100%; /* Garantir que ocupa toda a largura do contêiner */
-    text-align: left; /* Alinhar texto à esquerda */
+    width: 100%; 
+    text-align: left; 
 }
 
 .apresentacao__conteudo2__texto {
@@ -159,8 +159,8 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    border: 2px solid var(--cor-secundaria);
-    background-color: var(--cor-quaternaria);
+    border: none;
+    background-color: var(--cor-quintenaria);
     width: 328px; 
     height: 67px;
     border-radius: 24px;
@@ -173,7 +173,8 @@ body {
 }
 
 .apresentacao__conteudo2__botao:hover{
-    background-color: var(--cor-quintenaria);
+    background-color: var(--cor-hover);
+    color: var(--cor-primaria);
 }
 
 .rodape {
@@ -182,4 +183,90 @@ body {
     font-size: 24px;
     text-align: center;
     padding: 24px 0;
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+    .apresentacao {
+        margin: 0 5%;
+        flex-direction: column;
+        height: auto;
+        padding: 20px 0; 
+    }
+
+    .apresentacao__conteudo1, .apresentacao__conteudo2 {
+        width: 100%;
+        height: auto;
+    }
+
+    .apresentacao__conteudo1__inserir {
+        height: 300px;
+        font-size: 24px;
+    }
+
+    .apresentacao__botoes__container {
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .apresentacao__botoes__botao {
+        width: 100%;
+        height: 50px;
+        font-size: 14px;
+    }
+
+    .apresentacao__conteudo2 {
+        width: 100%;
+        height: 186px;
+        background-color: var(--cor-quaternaria);
+        padding: 20px;
+        border-radius: 32px;
+        box-shadow: 0px 24px 32px 8px rgba(0, 0, 0, 0.05);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        margin: 64px 0;
+    }
+
+    .apresentacao__conteudo2__img {
+        display: none; 
+    }
+
+    .apresentacao__conteudo2__resultado, .apresentacao__conteudo2__subtexto {
+        font-size: 16px;
+        text-align: center; 
+    }
+
+    .apresentacao__conteudo2__resultado {
+        width: 100%; 
+        text-align: left; 
+    }
+
+    .apresentacao__conteudo2__botao {
+        width: 100%;
+        height: 50px;
+        margin-top: auto;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 426px) {
+
+    .apresentacao__botoes__container {
+        flex-direction: row;
+        gap: 24px; 
+    }
+
+    .apresentacao__conteudo2 {
+        width: 688px;
+        height: 133px;
+        background-color: var(--cor-quaternaria);
+        padding: 20px;
+        border-radius: 32px;
+        box-shadow: 0px 24px 32px 8px rgba(0, 0, 0, 0.05);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        margin: 64px 0;
+    }
 }
